*Empty MediaWiki Message*

--- a/GentooQEMUBuildBox.mw
+++ b/GentooQEMUBuildBox.mw
@@ -20,8 +20,8 @@ dd if=/dev/zero of=qemuarm-0.swapfs count=524288
 losetup -f qemuarm-0.rootfs.ext2
 mkfs.ext2 /dev/loop0
 mount /dev/loop0 /mnt
-tar -xjpf /media/card/stage3-armv4tl-*.tar.bz2 -C /media/card
-tar -xjpf /media/card/portage-*.tar.bz2 -C /media/card/usr
+tar -xjpf /media/card/stage3-armv4tl-*.tar.bz2 -C /mnt
+tar -xjpf /media/card/portage-*.tar.bz2 -C /mnt/usr
 umount /mnt
 mkswap qemuarm-0.swapfs
 </pre>
@@ -80,7 +80,7 @@ echo 0 > /proc/sys/net/ipv4/ip_forward
 *add ttyAMA0 to /etc/securetty
 *emerge ntp (use binaries)
 *setup /etc/resolv.conf and /etc/conf.d/net corectly (useing 192.168.1.10 as local ip and 192.168.1.1 as default route)
-*add ntpdate ntp.task.gda.pl at the begining of start() in /etc/init,d/fsck
+*add ntpdate ntp.task.gda.pl at the begining of start() in /etc/init,d/fsck to ensure correct date at boot (no rtc clock support in that kernel image)
 *<pre>mkdir -p /lib/modules/2.6.23</pre>
 *<pre>touch /lib/modules/2.6.23/modules.dep</pre>
 *<pre>sync</pre>
