*Empty MediaWiki Message*

--- a/GentooQEMUBuildBox.mw
+++ b/GentooQEMUBuildBox.mw
@@ -20,8 +20,8 @@ dd if=/dev/zero of=qemuarm-0.swapfs count=524288
 losetup -f qemuarm-0.rootfs.ext2
 mkfs.ext2 /dev/loop0
 mount /dev/loop0 /mnt
-tar -xjpf /media/card/stage3-armv4tl-*.tar.bz2 -C /mnt
-tar -xjpf /media/card/portage-*.tar.bz2 -C /mnt/usr
+tar -xjpf stage3-armv4tl-*.tar.bz2 -C /mnt
+tar -xjpf portage-*.tar.bz2 -C /mnt/usr
 umount /mnt
 mkswap qemuarm-0.swapfs
 </pre>
