Moved the hardware template to the index page, since it's only used there

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -20,7 +20,65 @@
 |}
 
 ==Hardware ==
-{{Hardware}}
+
+===Hardware component support Openmoko===
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #EEEEEE; background:#ffffff; width:100%;"
+|-
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " |  
+<div align="left">
+===Lab===
+*[[MokoForesight]]
+===Flash===
+*[[NAND Flash]]
+*[[Partition|NAND Flash Partition]]
+*[[ST M58WR016KB706E]]
+===Chip===
+====CPU====
+*[[Samsung S3C2442B]]
+*[[Samsung K9F1208U0B]]
+*[[Samsung K4M511633C]]
+*[[Samsung S3C2410]]
+====GPS====
+*[[Hammerhead/Integrators]]
+*[[Hardware:AGPS]]
+*[[Hammerhead PMB 2520]]
+*[[U-blox ANTARIS 4 ATR0635]]
+====Power Management====
+*[[Philips PCF50606]]
+*[[NXP PCF50633]]
+====Accelerometer====
+*[[ST LIS302DL]]
+====GPRS /GSM Modem====
+*[[TI Calypso D751992AZHH]]
+*[[Smedia Glamo 3362]]
+
+</div>
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " |
+<div align="left">
+====GSM====
+*[[GTA01 gsm modem]]
+===Adapter===
+*[[Amontec JTAGkey]]
+===USB===
+*[[USB DFU]]
+*[[USB Product IDs]]
+*[[USB Networking]]
+===Bluetooth ===
+*[[Bluetooth_Support|Manually using Bluetooth]]
+*[[ Bluetooth powered Multi-SIM support/Device Support]]
+*[[Delta DFBM-CS320 Class2 Module]]
+===LCD Display===
+*[[TPO TD028TTEC1]]
+===Sound Card===
+*[[WM8753]]
+===Mono Amplifier===
+*[[LM4853]]
+===Serial Bus===
+*[[I2C]]
+</div>
+|}
+
+
 ===GTA01===
 {| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #B1FB17; background:#ffffff; width:100%;"
 |-
