*Empty MediaWiki Message*

--- a/MicroSD.mw
+++ b/MicroSD.mw
@@ -1,8 +1,7 @@
 microSD
 From Wikipedia, the free encyclopedia
- 
-A microSD card next to its SD adapter 
-Dissected 64 MB microSD Card, showing cross section through memory chips and printed circuit boardmicroSD is a format for removable flash memory cards. It is derived from SanDisk TransFlash and is used mainly in mobile telephones, but also in handheld GPS devices, portable audio players, video game consoles and expandable USB flash memory drives.
+
+microSD is a format for removable flash memory cards. It is derived from SanDisk TransFlash and is used mainly in mobile telephones, but also in handheld GPS devices, portable audio players, video game consoles and expandable USB flash memory drives.
 
 It is currently (2007) the smallest memory card available commercially. At 15mm × 11mm × 0.7mm (about the size of a fingernail), it is about a quarter the size of an SD card. There are adapters which allow a microSD card to be used in devices intended for SD, miniSD, or MemoryStick Duo cards, however they are not universally compatible.
 
