*Empty MediaWiki Message*

--- a/Samsung_K9F1208U0B.mw
+++ b/Samsung_K9F1208U0B.mw
@@ -9,3 +9,5 @@
 This is the only flash memory in the device.  The [[Samsung S3C2410]] boots directly from nand, using the [[S3C2410 Steppingstone]].
 
 We only use free software, no proprietary flash file systems.  For a full description of how it is used, see [[NAND bad blocks]]
+
+[[Category:CPU]]
