*Empty MediaWiki Message*

--- a/Samsung_K4M511633C.mw
+++ b/Samsung_K4M511633C.mw
@@ -6,3 +6,5 @@
 {{Main|Neo_1973_hardware}}
 * Connected to: [[Samsung S3C2410]] SDRAM controller
 * 2 Samsung K4M511633C inserted (so 128MB)
+
+[[Category:CPU]]
