*Empty MediaWiki Message*

--- a/Samsung_S3C2410.mw
+++ b/Samsung_S3C2410.mw
@@ -30,3 +30,5 @@ The USB Device controller is inside the S3C2410
 * 1200mAh lithium battery charges when connected to powered host.
 * Mini-B connector [http://www.cypressindustries.com/enlarge.asp?Img=products/images/ccmusbb-32005-601.gif this one].
 * This can be used as a USB host: [[Neo1973_USB_host]]
+
+[[Category:CPU]]
